--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,18 @@ server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=905643_MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/ticket_office
+spring.datasource.url=jdbc:mysql://localhost:3306/ticket_office_admin
 
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
+
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.freemarker.suffix=.ftl
 
